# minimal-opengl

./: CMakeLists.txt  README.md  main.cpp
shaders/: VertexShader.vs
src/: pathconfig.h.in  shader.cpp  shader.h
